bootstrap/auth/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-redis
  namespace: auth
spec:
  selector:
    app: auth-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
